--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "SET NODE_ENV=production webpack && gulp",
+    "postinstall": "NODE_ENV=production webpack && gulp"
   },
   "dependencies": {
     "babel-core": "^6.25.0",
@@ -18,9 +20,18 @@
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
+    "gulp": "^3.9.1",
+    "gulp-6to5": "^3.0.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-less": "^3.3.2",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0",
     "hjs": "~0.0.6",
     "mongoose": "^4.11.6",
     "morgan": "~1.8.1",
+    "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.0.0",
